--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -27,6 +27,6 @@ spec:
           - name: DBUSER
             value: "useruser" 
           - name: DBPASSWD
-            value: "t785efrb"
+            value: "t785efrb123"
       restartPolicy: Always
 
